# medical-record-inspector

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  EVALUATION_DIMENSIONS.md  INSTALLATION.md  README.md  README_EN.md  USAGE.md  config.example.yaml  config.yaml.example  docker-compose.yml  extras_requirements.txt  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  tech_report.md
api/: batch_engine.py  batch_optimizer.py  cache.py  config.py  config_loader.py  evaluator.py  exceptions.py  exporter.py  history.py  logger.py  main.py  models.py  perf_test.py  performance.py  standard_case_generator.py
api/middleware/: __init__.py  validation.py
benchmarks/: RESULTS.md  benchmark.py
cli/: __init__.py  __main__.py  quality_check.py
data/: .gitkeep
data/samples/: README.md  sample.txt  test.docx
data/samples/abnormal/: abnormal_case_001.txt  abnormal_case_002.txt  abnormal_case_003.txt
data/samples/normal/: case_001.txt  case_002.txt  case_003.txt
data/samples/templates/: template_emergency.txt  template_followup.txt
docs/: .gitkeep  CONFIGURATION.md  FAQ.md  INSTALLATION.md  TEMPLATE_GUIDE.md  USER_GUIDE.md  usage.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: EvaluationResult.tsx  InputSection.tsx  TemplateManager.tsx
frontend/src/hooks/: useTemplates.ts
frontend/src/test/: setup.ts
frontend/src/types/: evaluation.ts  template.ts
frontend/src/utils/: fileUpload.test.ts  fileUpload.ts
generators/: test_cases.py
src/: .env.example  .gitkeep  __init__.py  anomaly_detector.py  api.py  batch_processor.py  cli.py  config.py  config.pyi  embedder.py  explainer.py  extractor.py  feedback.py  hybrid_checker.py  inspector.py  locator.py  logger.py  main.py  model_cache.py  requirements.txt  similarity.py  template_loader.py  template_manager.py  visualizer.py
src/api/: evaluator.py  templates.py
src/evaluator/: __init__.py  evaluator.py  prompts.py
src/llm/: __init__.py  llm_client.py  models.py
src/models/: __init__.py  evaluator.py  response.py  template.py
src/templates/: __init__.py  store.py
src/utils/: batch_processor.py  cache.py  file_parser.py  rate_limiter.py
templates/: comparison.jinja2  example_good_case.txt  general_template.txt  quality_check.jinja2
tests/: .gitkeep  __init__.py  test_anomaly_detector.py  test_cache.py  test_embedder.py  test_evaluator.py  test_extractor.py  test_file_parser.py  test_generators.py  test_inspector.py  test_integration.py  test_models.py  test_similarity.py  test_template_loader.py
