[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-record-inspector"
version = "0.1.0"
description = "Medical Record Inspector - 让病历自我审查的质控工具"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "ChaosForge Agent", email = "agent@chaosforge.org"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["medical", "records", "quality", "control", "ai", "nlp"]

dependencies = [
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.1",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/your-org/medical-record-inspector"
"Bug Tracker" = "https://github.com/your-org/medical-record-inspector/issues"
"Documentation" = "https://github.com/your-org/medical-record-inspector/docs"

[project.scripts]
medical-inspector = "src.cli:main"
mri-cli = "src.cli:main"

[tool.setuptools]
packages = ["src", "tests"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_advent = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = []

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.next
  | \.nuxt
  | __pycache__
  | build
  | dist
)/
'''

[tool.pylint]
output-format = "text"
max-line-length = 88
disable = [
    "R0903",
    "R0902",
    "R0913",
    "R0914",
    "R1702",
]
